# typst

./: CONTEXT.md  Cargo.toml
crates/typst-cnd/: Cargo.toml
crates/typst-cnd/examples/: citations.typ  complex_columns.typ  complex_hardcore.typ  complex_multipage.typ  complex_refs.typ  complex_semantic.typ  complex_tables.typ  comprehensive.typ  footnotes.typ  image_figure.typ  inline_code.typ  minimal.typ  nonflat_markers.typ  refs.yml  rich.typ  structured.typ  terms.typ
crates/typst-cnd/examples/newsletter/: main.typ
crates/typst-cnd/src/: cnd.rs  document.rs  lib.rs  location.rs  manifest.rs  metadata.rs  model.rs  world.rs
crates/typst-cnd/src/emit/: code.rs  convert.rs  extract.rs  figure.rs  heading.rs  list.rs  math.rs  mod.rs  paragraph.rs  pools.rs  quote.rs  reading_order.rs  refs.rs  table.rs
crates/typst-cnd/tests/: document_suite.rs
crates/typst-cnd/tests/common/: mod.rs
crates/typst-library/src/introspection/: state.rs
crates/typst-library/src/model/: bibliography.rs
